egglog/tests/snapshots/files__proofs__repro_desugar_143_proof_testing.snap
---
source: egglog/tests/files.rs
assertion_line: 266
expression: proof_snapshot
---
(let prf0 (Fiat (= (f 0 0) (f 0 0))))
(let prf1 (Fiat (= 0 0)))
(let prf2
  (Rule
                                            (= (f 1 1) (f 1 1))
                                            (name
                                              "(rule ((f x)
         (= x y)
         (= z y)
         (= a (f z)))
        ((set (f (+ z 1)) (+ a 1)))
           )")
                                            (premises
                                              prf0
                                              prf1
                                              prf1
                                              prf1
                                              prf0
                                              prf1)
                                            (substitution
                                              (z 0)
                                              (y 0)
                                              (a 0)
                                              (@n 0)
                                              (x 0)
                                              (@n1 0))))
(let prf3 (Fiat (= 1 1)))
(let prf4
  (Rule
                                        (= (f 2 2) (f 2 2))
                                        (name
                                          "(rule ((f x)
         (= x y)
         (= z y)
         (= a (f z)))
        ((set (f (+ z 1)) (+ a 1)))
           )")
                                        (premises prf2 prf3 prf3 prf3 prf2 prf3)
                                        (substitution
                                          (z 1)
                                          (y 1)
                                          (a 1)
                                          (@n 1)
                                          (x 1)
                                          (@n1 1))))
(let prf5 (Fiat (= 2 2)))
(let prf6
  (Rule
                                    (= (f 3 3) (f 3 3))
                                    (name
                                      "(rule ((f x)
         (= x y)
         (= z y)
         (= a (f z)))
        ((set (f (+ z 1)) (+ a 1)))
           )")
                                    (premises prf4 prf5 prf5 prf5 prf4 prf5)
                                    (substitution
                                      (z 2)
                                      (y 2)
                                      (a 2)
                                      (@n 2)
                                      (x 2)
                                      (@n1 2))))
(let prf7 (Fiat (= 3 3)))
(let prf8
  (Rule
                                (= (f 4 4) (f 4 4))
                                (name
                                  "(rule ((f x)
         (= x y)
         (= z y)
         (= a (f z)))
        ((set (f (+ z 1)) (+ a 1)))
           )")
                                (premises prf6 prf7 prf7 prf7 prf6 prf7)
                                (substitution
                                  (z 3)
                                  (y 3)
                                  (a 3)
                                  (@n 3)
                                  (x 3)
                                  (@n1 3))))
(let prf9 (Fiat (= 4 4)))
(let prf10
  (Rule
                            (= (f 5 5) (f 5 5))
                            (name
                              "(rule ((f x)
         (= x y)
         (= z y)
         (= a (f z)))
        ((set (f (+ z 1)) (+ a 1)))
           )")
                            (premises prf8 prf9 prf9 prf9 prf8 prf9)
                            (substitution (z 4) (y 4) (a 4) (@n 4) (x 4) (@n1 4))))
(let prf11 (Fiat (= 5 5)))
(let prf12
  (Rule
                        (= (f 6 6) (f 6 6))
                        (name
                          "(rule ((f x)
         (= x y)
         (= z y)
         (= a (f z)))
        ((set (f (+ z 1)) (+ a 1)))
           )")
                        (premises prf10 prf11 prf11 prf11 prf10 prf11)
                        (substitution (z 5) (y 5) (a 5) (@n 5) (x 5) (@n1 5))))
(let prf13 (Fiat (= 6 6)))
(let prf14
  (Rule
                    (= (f 7 7) (f 7 7))
                    (name
                      "(rule ((f x)
         (= x y)
         (= z y)
         (= a (f z)))
        ((set (f (+ z 1)) (+ a 1)))
           )")
                    (premises prf12 prf13 prf13 prf13 prf12 prf13)
                    (substitution (z 6) (y 6) (a 6) (@n 6) (x 6) (@n1 6))))
(let prf15 (Fiat (= 7 7)))
(let prf16
  (Rule
                (= (f 8 8) (f 8 8))
                (name
                  "(rule ((f x)
         (= x y)
         (= z y)
         (= a (f z)))
        ((set (f (+ z 1)) (+ a 1)))
           )")
                (premises prf14 prf15 prf15 prf15 prf14 prf15)
                (substitution (z 7) (y 7) (a 7) (@n 7) (x 7) (@n1 7))))
(let prf17 (Fiat (= 8 8)))
(let prf18
  (Rule
            (= (f 9 9) (f 9 9))
            (name
              "(rule ((f x)
         (= x y)
         (= z y)
         (= a (f z)))
        ((set (f (+ z 1)) (+ a 1)))
           )")
            (premises prf16 prf17 prf17 prf17 prf16 prf17)
            (substitution (z 8) (y 8) (a 8) (@n 8) (x 8) (@n1 8))))
(let prf19 (Fiat (= 9 9)))
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises
    (Rule
      (= (f 10 10) (f 10 10))
      (name
        "(rule ((f x)
       (= x y)
       (= z y)
       (= a (f z)))
      ((set (f (+ z 1)) (+ a 1)))
         )")
      (premises prf18 prf19 prf19 prf19 prf18 prf19)
      (substitution (z 9) (y 9) (a 9) (@n 9) (x 9) (@n1 9)))
    (Fiat (= 10 10)))
  (substitution (@n2 10)))
(let prf0
  (Sym
                                            (= (Num 1) (fib (Num 2)))
                                            (Fiat (= (fib (Num 2)) (Num 1)))))
(let prf1 (Fiat (= 2 2)))
(let prf2 (Fiat (= 1 1)))
(let prf3
  (Sym
                                      (= (Num 2) (fib (Num 3)))
                                      (Rule
                                        (= (fib (Num 3)) (Num 2))
                                        (name
                                          "(rule ((= (Num a) (fib (Num x)))
         (= (Num b) (fib (Num y)))
         (= x1 x)
         (= y1 y)
         (= a1 a)
         (= b1 b)
         (= x1 x2)
         (= y1 y2)
         (= a1 a2)
         (= b1 b2)
         (= 1 (- x2 y2)))
        ((let n (+ x 1))
         (let sum (+ a1 b2))
         (union (fib (Num n)) (Num sum)))
           )")
                                        (premises
                                          prf0
                                          (Sym
                                            (= (Num 1) (fib (Num 1)))
                                            (Fiat (= (fib (Num 1)) (Num 1))))
                                          prf1
                                          prf2
                                          prf2
                                          prf2
                                          prf1
                                          prf2
                                          prf2
                                          prf2
                                          prf2)
                                        (substitution
                                          (b 1)
                                          (a2 1)
                                          (b2 1)
                                          (a 1)
                                          (y2 1)
                                          (x1 2)
                                          (x2 2)
                                          (y 1)
                                          (b1 1)
                                          (a1 1)
                                          (x 2)
                                          (y1 1)))))
(let prf4 (Fiat (= 3 3)))
(let prf5
  (Sym
                                (= (Num 3) (fib (Num 4)))
                                (Rule
                                  (= (fib (Num 4)) (Num 3))
                                  (name
                                    "(rule ((= (Num a) (fib (Num x)))
         (= (Num b) (fib (Num y)))
         (= x1 x)
         (= y1 y)
         (= a1 a)
         (= b1 b)
         (= x1 x2)
         (= y1 y2)
         (= a1 a2)
         (= b1 b2)
         (= 1 (- x2 y2)))
        ((let n (+ x 1))
         (let sum (+ a1 b2))
         (union (fib (Num n)) (Num sum)))
           )")
                                  (premises
                                    prf3
                                    prf0
                                    prf4
                                    prf1
                                    prf1
                                    prf2
                                    prf4
                                    prf1
                                    prf1
                                    prf2
                                    prf2)
                                  (substitution
                                    (b 1)
                                    (a2 2)
                                    (b2 1)
                                    (a 2)
                                    (y2 2)
                                    (x1 3)
                                    (x2 3)
                                    (y 2)
                                    (b1 1)
                                    (a1 2)
                                    (x 3)
                                    (y1 2)))))
(let prf6 (Fiat (= 4 4)))
(let prf7
  (Sym
                          (= (Num 5) (fib (Num 5)))
                          (Rule
                            (= (fib (Num 5)) (Num 5))
                            (name
                              "(rule ((= (Num a) (fib (Num x)))
         (= (Num b) (fib (Num y)))
         (= x1 x)
         (= y1 y)
         (= a1 a)
         (= b1 b)
         (= x1 x2)
         (= y1 y2)
         (= a1 a2)
         (= b1 b2)
         (= 1 (- x2 y2)))
        ((let n (+ x 1))
         (let sum (+ a1 b2))
         (union (fib (Num n)) (Num sum)))
           )")
                            (premises
                              prf5
                              prf3
                              prf6
                              prf4
                              prf4
                              prf1
                              prf6
                              prf4
                              prf4
                              prf1
                              prf2)
                            (substitution
                              (b 2)
                              (a2 3)
                              (b2 2)
                              (a 3)
                              (y2 3)
                              (x1 4)
                              (x2 4)
                              (y 3)
                              (b1 2)
                              (a1 3)
                              (x 4)
                              (y1 3)))))
(let prf8 (Fiat (= 5 5)))
(let prf9
  (Rule
                      (= (Num 8) (fib (Num 6)))
                      (name
                        "(rule ((= (Num a) (fib (Num x)))
         (= (Num b) (fib (Num y)))
         (= x1 x)
         (= y1 y)
         (= a1 a)
         (= b1 b)
         (= x1 x2)
         (= y1 y2)
         (= a1 a2)
         (= b1 b2)
         (= 1 (- x2 y2)))
        ((let n (+ x 1))
         (let sum (+ a1 b2))
         (union (fib (Num n)) (Num sum)))
           )")
                      (premises
                        prf7
                        prf5
                        prf8
                        prf6
                        prf8
                        prf4
                        prf8
                        prf6
                        prf8
                        prf4
                        prf2)
                      (substitution
                        (b 3)
                        (a2 5)
                        (b2 3)
                        (a 5)
                        (y2 4)
                        (x1 5)
                        (x2 5)
                        (y 4)
                        (b1 3)
                        (a1 5)
                        (x 5)
                        (y1 4))))
(let prf10 (Fiat (= 6 6)))
(let prf11 (Fiat (= 8 8)))
(let prf12
  (Rule
                  (= (Num 13) (fib (Num 7)))
                  (name
                    "(rule ((= (Num a) (fib (Num x)))
         (= (Num b) (fib (Num y)))
         (= x1 x)
         (= y1 y)
         (= a1 a)
         (= b1 b)
         (= x1 x2)
         (= y1 y2)
         (= a1 a2)
         (= b1 b2)
         (= 1 (- x2 y2)))
        ((let n (+ x 1))
         (let sum (+ a1 b2))
         (union (fib (Num n)) (Num sum)))
           )")
                  (premises
                    prf9
                    prf7
                    prf10
                    prf8
                    prf11
                    prf8
                    prf10
                    prf8
                    prf11
                    prf8
                    prf2)
                  (substitution
                    (b 5)
                    (a2 8)
                    (b2 5)
                    (a 8)
                    (y2 5)
                    (x1 6)
                    (x2 6)
                    (y 5)
                    (b1 5)
                    (a1 8)
                    (x 6)
                    (y1 5))))
(let prf13 (Fiat (= 7 7)))
(let prf14 (Fiat (= 13 13)))
(let prf15
  (Rule
              (= (Num 21) (fib (Num 8)))
              (name
                "(rule ((= (Num a) (fib (Num x)))
         (= (Num b) (fib (Num y)))
         (= x1 x)
         (= y1 y)
         (= a1 a)
         (= b1 b)
         (= x1 x2)
         (= y1 y2)
         (= a1 a2)
         (= b1 b2)
         (= 1 (- x2 y2)))
        ((let n (+ x 1))
         (let sum (+ a1 b2))
         (union (fib (Num n)) (Num sum)))
           )")
              (premises
                prf12
                prf9
                prf13
                prf10
                prf14
                prf11
                prf13
                prf10
                prf14
                prf11
                prf2)
              (substitution
                (b 8)
                (a2 13)
                (b2 8)
                (a 13)
                (y2 6)
                (x1 7)
                (x2 7)
                (y 6)
                (b1 8)
                (a1 13)
                (x 7)
                (y1 6))))
(let prf16 (Fiat (= 21 21)))
(let prf17 (Fiat (= 9 9)))
(let prf18 (Fiat (= 34 34)))
(Sym
  (= (fib (Num 10)) (Num 55))
  (Rule
    (= (Num 55) (fib (Num 10)))
    (name
      "(rule ((= (Num a) (fib (Num x)))
       (= (Num b) (fib (Num y)))
       (= x1 x)
       (= y1 y)
       (= a1 a)
       (= b1 b)
       (= x1 x2)
       (= y1 y2)
       (= a1 a2)
       (= b1 b2)
       (= 1 (- x2 y2)))
      ((let n (+ x 1))
       (let sum (+ a1 b2))
       (union (fib (Num n)) (Num sum)))
         )")
    (premises
      (Rule
        (= (Num 34) (fib (Num 9)))
        (name
          "(rule ((= (Num a) (fib (Num x)))
       (= (Num b) (fib (Num y)))
       (= x1 x)
       (= y1 y)
       (= a1 a)
       (= b1 b)
       (= x1 x2)
       (= y1 y2)
       (= a1 a2)
       (= b1 b2)
       (= 1 (- x2 y2)))
      ((let n (+ x 1))
       (let sum (+ a1 b2))
       (union (fib (Num n)) (Num sum)))
         )")
        (premises
          prf15
          prf12
          prf11
          prf13
          prf16
          prf14
          prf11
          prf13
          prf16
          prf14
          prf2)
        (substitution
          (b 13)
          (a2 21)
          (b2 13)
          (a 21)
          (y2 7)
          (x1 8)
          (x2 8)
          (y 7)
          (b1 13)
          (a1 21)
          (x 8)
          (y1 7)))
      prf15
      prf17
      prf11
      prf18
      prf16
      prf17
      prf11
      prf18
      prf16
      prf2)
    (substitution
      (b 21)
      (a2 34)
      (b2 21)
      (a 34)
      (y2 8)
      (x1 9)
      (x2 9)
      (y 8)
      (b1 21)
      (a1 34)
      (x 9)
      (y1 8))))
