egglog/tests/snapshots/files__proofs__repro_equal_constant_proof_testing.snap
---
source: egglog/tests/files.rs
assertion_line: 297
expression: proof_snapshot
---
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises (Fiat (= (foo 10) (foo 10))) (Fiat (= () ())))
  (substitution (@n1 10)))
