egglog/tests/snapshots/files__proofs__repro_filter_bug_proof_testing.snap
---
source: egglog/tests/files.rs
expression: proof_snapshot
---
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises
    (Fiat (= (View (E) (S1)) (View (E) (S1))))
    (Fiat (= (UF_Exp (E) (E)) (UF_Exp (E) (E))))
    (Fiat (= (UF_Stmt (S1) (S2)) (UF_Stmt (S1) (S2))))
    (Fiat (= () ())))
  (substitution (c1 (E)) (c2 (S1)) (c1_leader (E)) (c2_leader (S2))))
