egglog/tests/snapshots/files__proofs__repro_new_backend_prims_proof_testing.snap
---
source: egglog/tests/files.rs
expression: proof_snapshot
---
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises
    (Fiat (= (predicate 1 false) (predicate 1 false)))
    (Computed (= false false)))
  (substitution (@n false)))
