egglog/tests/snapshots/files__proofs__repro_noteqbug_proof_testing.snap
---
source: egglog/tests/files.rs
expression: proof_snapshot
---
(Fiat (= (R 1) (R 2)))
(Fiat (= (R 1) (R 2)))
