egglog/tests/snapshots/files__proofs__repro_querybug2_proof_testing.snap
---
source: egglog/tests/files.rs
expression: proof_snapshot
---
(Rule
  (= (OtherNum 2) (Num 2))
  (name
    "(rule ((= y 2))
      ((union (OtherNum y) (Num y)))
         )")
  (premises (Fiat (= 2 2)))
  (substitution (y 2)))
