egglog/tests/snapshots/files__proofs__repro_small_rebuild_fail_term_encoding_proof_testing.snap
---
source: egglog/tests/files.rs
expression: proof_snapshot
---
(Fiat (= (Prog (L 0)) (Ass "x" (Const 10))))
