egglog/tests/snapshots/files__proofs__resolution_proof_testing.snap
---
source: egglog/tests/files.rs
expression: proof_snapshot
---
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises
    (Fiat (= (TrueConst) (TrueConst)))
    (Fiat (= (FalseConst) (FalseConst)))
    (Fiat (= () ())))
  (substitution (@v (TrueConst)) (@v1 (FalseConst))))
(let t0 (myor (negate (p 0)) (FalseConst)))
(let prf0
  (Rule
            (= t0 (negate (p 0)))
            (name "(rewrite (myor a $False) a)")
            (premises (Fiat (= t0 t0)))
            (substitution (@rewrite_var__5 t0) (a (negate (p 0))))))
(let t1 (myor (p 2) t0))
(let t2 (myor (negate (p 2)) (FalseConst)))
(let prop0 (= (TrueConst) t2))
(let t3 (myor (p 1) t2))
(let prf1
  (Rule
                      (= t2 (TrueConst))
                      (name "(rewrite (myor $False a) a)")
                      (premises
                        (Congr
                          (= (TrueConst) (myor (FalseConst) t2))
                          (Sym (= (TrueConst) t3) (Fiat (= t3 (TrueConst))))
                          (Fiat (= (p 1) (FalseConst)))
                          0))
                      (substitution (@rewrite_var__4 (TrueConst)) (a t2))))
(let prf2 (Sym prop0 prf1))
(let prf3 (Fiat (= t2 t2)))
(let prf4
  (Rule
                          (= t2 (negate (p 2)))
                          (name "(rewrite (myor a $False) a)")
                          (premises prf3)
                          (substitution (@rewrite_var__5 t2) (a (negate (p 2))))))
(Rule
  (= (p 0) (FalseConst))
  (name
    "(rule ((= (negate p) $True))
      ((union p $False))
         )")
  (premises
    (Trans
      (= (negate (p 0)) (TrueConst))
      (Sym (= (negate (p 0)) t0) prf0)
      (Sym
        (= t0 (TrueConst))
        (Rule
          (= (TrueConst) t0)
          (name
            "(rule ((= $True (myor a as))
       (= $True (myor (negate a) bs)))
      ((union (myor as bs) $True))
         )")
          (premises
            (Congr
              (= (TrueConst) (myor (p 2) (negate (p 0))))
              (Sym (= (TrueConst) t1) (Fiat (= t1 (TrueConst))))
              prf0
              1)
            (Congr
              prop0
              (Trans
                (= (TrueConst) (myor (TrueConst) (FalseConst)))
                prf2
                (Congr
                  (= t2 (myor (TrueConst) (FalseConst)))
                  prf3
                  (Trans
                    (= (negate (p 2)) (TrueConst))
                    (Sym (= (negate (p 2)) t2) prf4)
                    prf1)
                  0))
              (Trans (= (TrueConst) (negate (p 2))) prf2 prf4)
              0))
          (substitution (a (p 2)) (as (negate (p 0))) (bs (FalseConst)))))))
  (substitution (p (p 0))))
(let t0 (myor (negate (p 2)) (FalseConst)))
(let t1 (myor (p 1) t0))
(Rule
  (= (p 2) (FalseConst))
  (name
    "(rule ((= (negate p) $True))
      ((union p $False))
         )")
  (premises
    (Trans
      (= (negate (p 2)) (TrueConst))
      (Sym
        (= (negate (p 2)) t0)
        (Rule
          (= t0 (negate (p 2)))
          (name "(rewrite (myor a $False) a)")
          (premises (Fiat (= t0 t0)))
          (substitution (@rewrite_var__5 t0) (a (negate (p 2))))))
      (Rule
        (= t0 (TrueConst))
        (name "(rewrite (myor $False a) a)")
        (premises
          (Congr
            (= (TrueConst) (myor (FalseConst) t0))
            (Sym (= (TrueConst) t1) (Fiat (= t1 (TrueConst))))
            (Fiat (= (p 1) (FalseConst)))
            0))
        (substitution (@rewrite_var__4 (TrueConst)) (a t0)))))
  (substitution (p (p 2))))
